# scheduler

./: .gitignore  README.org  preferences.py  scheduler.py  utils.py
chores/: misc_chores.csv
frontend/: Makefile  README.org  docker-compose.yml  dune-project  magizhchi.opam  preferences.py  requirements.txt  scheduler.py  start.sh  utils.py
frontend/.build/: Dockerfile
frontend/chores/: misc_chores.csv
frontend/client/: chores.ml  dune  gen_schedule.ml  guests.ml  main.ml  prefs.ml  stats.ml  utils.ml
frontend/data/: top_tasks.csv
frontend/docs/: howtouse.org
frontend/guests/: guests.csv
frontend/lib/: constants.ml  csv_utils.ml  dune
frontend/preferences/: Akemi.csv  Alex_H.csv  Alex_K.csv  Andrei.csv  Arul.csv  Asa.csv  Claire.csv  Jorge.csv  Naomi.csv  Nicole.csv  Oliver.csv  Rachel.csv  Shahane.csv  Triana.csv
frontend/recipes/: top_tasks.vg.json
frontend/test/: dune
preferences/: Arul.csv  Asa.csv  Catherine.csv  Claire.csv  Eros.csv  Mika.csv  Naomi.csv  Oliver.csv  Rachel.csv  Shahanae.csv  Stella.csv  Triana.csv  guests.csv
