(lang dune 3.16)

(name magizhchi)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name magizhchi)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune bonsai
          (pyml (>= 20231101)) (brr (>= 0.0.6)) (cohttp-lwt-unix (>= 5.3.0)))
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
